# Qt6RTFEditor

./: .gitignore  CMakeLists.txt  README.md  Sample.rtf  instructions.txt  main.cpp  mainwindow.cpp  mainwindow.hpp
